data/derived/fa15/progs/unify/prog3593.ml.out
Characters 205-206:
  let (_, res) = List.fold_left f base args in
                                ^
Error: This expression has type int * int list -> 'a * 'b -> int list
       but an expression was expected of type
         int * int list -> 'a * 'b -> int * int list
       Type int list is not compatible with type int * int list 
